--- a/styles.css
+++ b/styles.css
@@ -4372,6 +4372,9 @@ input[type="text"].note-toolbar-setting-error,
         opacity: 0.8;
     }
     & .note-toolbar-card-item-title {
+        .note-toolbar-tips-card-items & {
+            color: var(--text-on-accent);
+        }
         font-size: 1.25em;
         font-weight: var(--h3-weight);
         .is-mobile & {
@@ -4391,7 +4394,7 @@ input[type="text"].note-toolbar-setting-error,
         align-self: start;
         color: var(--text-muted);
         .note-toolbar-tips-card-items & {
-            color: var(--text-normal);
+            color: var(--text-on-accent);
         }
         display: flex;
         font-size: var(--font-ui-small);
